[gd_scene load_steps=8 format=3 uid="uid://m6hfxwqp3qut"]

[ext_resource type="PackedScene" uid="uid://t5fl6vwint52" path="res://game_state.tscn" id="1_5l8e7"]
[ext_resource type="Script" path="res://UIController.gd" id="2_y0f0i"]

[sub_resource type="LabelSettings" id="LabelSettings_8v1ul"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_1k3e6"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_2grc7"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_268mn"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_v2lh7"]
font_size = 6

[node name="Main" type="Node2D"]

[node name="GameState" parent="." instance=ExtResource("1_5l8e7")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("2_y0f0i")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="HelpText" type="Label" parent="CanvasLayer/Control"]
layout_direction = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.15
anchor_top = -0.2
anchor_right = -0.15
anchor_bottom = -0.2
offset_left = 8.0
offset_top = 8.0
offset_right = 133.0
offset_bottom = 20.0
text = "Press 'H' or Back Button for help"
label_settings = SubResource("LabelSettings_8v1ul")
metadata/_edit_use_anchors_ = true

[node name="HelpScreen" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -75.5
offset_right = 96.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2

[node name="HelpInfo" type="Label" parent="CanvasLayer/HelpScreen"]
layout_mode = 0
offset_left = 10.0
offset_top = 11.0
offset_right = 183.0
offset_bottom = 139.0
text = "WASD, Arrow Keys, Joystick, or Dpad to move
Hold Shift or A to sprint (sorry no stamina 
bar right now)
Press Space or Y to meow
Avoid the lizards and make your way to the 
stairs
Meowing will pull the world around you
back in time
H or Back Button to close this"
label_settings = SubResource("LabelSettings_1k3e6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndScreen" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -94.0
offset_right = 93.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2

[node name="Congrats" type="Label" parent="CanvasLayer/EndScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Congratulations!
"

[node name="Thanks" type="Label" parent="CanvasLayer/EndScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.524
anchor_top = 0.332
anchor_right = 0.524
anchor_bottom = 0.332
offset_left = -68.488
offset_top = -43.416
offset_right = 67.512
offset_bottom = 37.584
text = "Thanks for playing!
Please feel free to reach out 
to me with commeownts
and feedback!"
label_settings = SubResource("LabelSettings_2grc7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Label" parent="CanvasLayer/EndScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.523652
anchor_top = 0.633298
anchor_right = 0.523652
anchor_bottom = 0.633298
offset_left = -68.423
offset_top = -29.06
offset_right = 67.577
offset_bottom = 29.94
text = "Times Detected: 
Number of Meows:"
label_settings = SubResource("LabelSettings_268mn")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="CanvasLayer/EndScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.516
anchor_top = 0.902
anchor_right = 0.516
anchor_bottom = 0.902
offset_left = -28.992
offset_top = -28.576
offset_right = 27.008
offset_bottom = 2.42398
text = "Quit"

[node name="Label" type="Label" parent="CanvasLayer/EndScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = -12.0
offset_right = 68.5
grow_horizontal = 2
grow_vertical = 0
text = "Click button or press Back on Controller to quit"
label_settings = SubResource("LabelSettings_v2lh7")

[connection signal="game_completed" from="GameState" to="CanvasLayer" method="_on_game_state_game_completed"]
[connection signal="help_opened" from="CanvasLayer" to="GameState" method="_on_canvas_layer_help_opened"]
[connection signal="button_up" from="CanvasLayer/EndScreen/Button" to="CanvasLayer" method="_on_button_button_up"]
